# internal/api/dto/post.go
@@ -28,3 +28,12 @@ type PostDetail struct {
 type GetPostDetailRes struct {
 	Post *PostDetail `json:"post"`
 }
+
+type GetPostListReq struct {
+	Page int `form:"page" binding:"required,min=1"`
+	Size int `form:"size" binding:"required,min=1,max=100"`
+}
+
+type GetPostListRes struct {
+	Posts []*PostDetail `json:"posts"`
+}
